--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="https://jorellandrei.github.io/FINEZ_TECHNICAL4A-AWD-FEUTECH/" target="_blank">Home</a></li>
+                        <li><a href="https://jorellandrei.github.io/FINEZ_TECHNICAL4A-AWD-FEUTECH/">Home</a></li>
                         <li><a style="color: #fdfdfd;" href="">Prices</a></li>
 
                     </ul>
